2011-12-02  Murray Cumming  <murrayc@murrayc.com>

	test_selfhosting_new_empty(): Correct and expand.

	* tests/test_selfhosting_new_empty.cc: Fix a CENTRAL->SELF typo. This 
  probably only appeared to work before because no database cluster was really 
  being initialized. Also actually create a database in the database cluster 
  and set its system preferences table's record.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

  test_document_load_and_change: Test renaming and removing of tables.

	* tests/test_document_load_and_change.cc: This also checks that relationships
	are update when a table is renamed.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_and_change: Test print layout removal.

	* tests/test_document_load_and_change.cc:

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	Updated the Document DTD.

	* glom/glom_document.dtd: This fixes make check with the new save of 
	examples/example_film_manager.glom.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	self-hosting tests: Avoid some noisy stdout messages.

	* tests/test_selfhosting_utils.cc: Do not show PostgreSQL startup, etc,
	progress messages.

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_load_and_change(): Test removal of a relationship.

	* tests/test_document_load_and_change.cc: Test Document::remove_relationship().

2011-11-30  Murray Cumming  <murrayc@murrayc.com>

	test_document_load: Test field formatting.

	* tests/test_document_load.cc: Also use a different example, to
  widen the range of examples that we test.

1.20.1:

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_change: Test a little more API.

	* tests/test_document_change.cc: Add a table and test some API that uses it.
	We could do much more here.

2011-11-29  Murray Cumming  <murrayc@murrayc.com>

	test_document_load_and_change: Test Document::remove_field() too.

	* tests/test_document_load_and_change.cc: Exercise a little more of the API.
