@@ -1,11 +1,19 @@
 2011-12-02  Murray Cumming  <murrayc@murrayc.com>
 
+	test_selfhosting_new_empty(): Also test DbUtils::get_unused_database_name().
+
+	* glom/libglom/db_utils.cc: get_unused_database_name(): Remove debug output.
+	* tests/test_selfhosting_new_empty.cc: Excercise DbUtils::get_unused_database_name(),
+	though we do not test it yet when the first choice already exists.
+
+2011-12-02  Murray Cumming  <murrayc@murrayc.com>
+
 	test_selfhosting_new_empty(): Correct and expand.
 
 	* tests/test_selfhosting_new_empty.cc: Fix a CENTRAL->SELF typo. This 
-  probably only appeared to work before because no database cluster was really 
-  being initialized. Also actually create a database in the database cluster 
-  and set its system preferences table's record.
+	probably only appeared to work before because no database cluster was really 
+	being initialized. Also actually create a database in the database cluster 
+	and set its system preferences table's record.
 
 2011-11-30  Murray Cumming  <murrayc@murrayc.com>
 
